# deepfake-emotion-robustness

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC_v1.md  pyproject.toml  requirements.txt  verify_ablation.py
.github/: pull_request_template.md
DeepfakeBench/: deepfakebench_score_extraction.ipynb  install.sh
configs/: base.yaml  experiments.yaml  paths.example.yaml  pipeline.example.yaml
datasets/: README.md
docs/: SPEC_experiment_integrity_audit.md  SPEC_v1.md  data_schema.md  experiment_plan.md  thesis_notes.md
memory/: MEMORY.md  project_spec.md
notebooks/: README.md  celeb_dfpp_dataset_overview.ipynb  deepfakebench_score_extraction.ipynb  face-preprocessing copy.ipynb  face-preprocessing.ipynb  stage4a_baseline_detector_inference copy.ipynb  stage4a_baseline_detector_inference.ipynb  stage4b_baseline_experiments copy.ipynb  stage4b_baseline_experiments.ipynb  stage4b_xception_fusion_experiments.ipynb  stage4b_xception_fusion_xgboost_experiments.ipynb  thesis-stage3-emotion-annotation copy.ipynb  thesis-stage3-emotion-annotation.ipynb  thesis_fig2_fig3_dataset_visualizations.ipynb
scripts/: aggregate_emotion_features.py  analyze_forgery_emotion_crosstab.py  analyze_per_emotion_auc.py  analyze_shap.py  analyze_umap.py  build_subset.py  build_thesis_artifacts.py  evaluate_by_emotion.py  extract_faces.py  extract_frames.py  merge_metadata.py  prepare-light-dataset.sh  prepare_light_dataset.py  run_deepfake_detector.py  run_emotion_annotation.py  run_huggingface_detector.py  run_late_fusion.py  run_statistical_tests.py  (+4 more)
(+306 files in other folders)
