[project]
name = "deepfake-emotion-robustness"
version = "0.1.0"
description = "Emotion-Annotated Deepfake Video Dataset and Robustness Analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyarrow>=13.0",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
]
